--- a/week1-community-bridge-progress-report/index.html
+++ b/week1-community-bridge-progress-report/index.html
@@ -30,7 +30,7 @@
 <li>Complete the proposal for <strong>“Downsampling and unlimited metric retention for Promothesus”</strong>.</li>
 <li>Go through all the documentation of <a href="https://thanos.io/">Thanos</a>, play with all the components and fix all the broken links.</li>
 <li>Make changes requested for the Pull Requests which are under review.</li>
-<li>Prepare a short 5 min talk on <strong>“Downsampling and unlimited metric retention for Promothesus”</strong> to be delivered in Mentees Hangout Meet on Friday 🤗</li>
+<li>Prepare a short 5 min talk on <strong>“Downsampling and unlimited metric retention for Promotheus”</strong> to be delivered in Mentees Hangout Meet on Friday 🤗</li>
 </ol>
 <p>It is a good experience till now, and I look forward to more contributing, learning and growing ! 😇</p>
 <p><strong>Signing off for today, until next week</strong> 👻</p>
