--- a/cncf-intern-with-thanos/index.html
+++ b/cncf-intern-with-thanos/index.html
@@ -35,7 +35,7 @@
       />
   </a>
     </span></p>
-<center><sub>[Thanos, Promotheus, Grafana]</sub></center><br/>
+<center><sub>[Thanos, Prometheus, Grafana]</sub></center><br/>
 <p><a href="https://github.com/thanos-io/thanos">Thanos</a> is a project that turns your <a href="https://prometheus.io/docs/prometheus/latest/installation/">Prometheus</a> installation into a highly available metric system with unlimited storage capacity. From a very high-level view, it does this by deploying a sidecar to Prometheus, which uploads the data blocks to any object storage. A store component downloads the blocks again and makes them accessible to a query component, which has the same API as Prometheus itself. This works nicely with <a href="https://grafana.com/">Grafana</a> because its the same API. So without much effort, you can view your nice dashboard graphs beyond the configured retention time of your Prometheus monitoring stack. and get an almost unlimited timeline , only restricted by object storage capacities. <a href="https://github.com/thanos-io/thanos">Thanos</a> also provides downsampling of stored metrics, deduplication of data points and some more.</p>
 <h2>Katacoda:Introduction</h2>
 <p><span
